get example chart working
Wow, chart.js is amazing.

--- a/views/index.jade
+++ b/views/index.jade
@@ -11,7 +11,7 @@ html
     != css()
 
   body
-    div(id='graph') // the graph will show here, zoomable
+    canvas(id='graph') This is a fancy chart that requires JavaScript, sorry. :-(
     div(id='controls') // controls for number of routes, specific day
     div(id='routes') // two dropdowns for begin and end town, and a button to swap them
 
