switch over to Bootstrap
- use decorators to layout elements
- assign id attributes so labels will work
- use id selectors in javascript

--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -5,4 +5,14 @@ base()
 
 body
   padding: 15px
-  
+
+.container
+  padding-left: 0
+  padding-right: 0
+  div:first-child
+    padding-left: 0
+  div:last-child
+    padding-right: 0
+
+select
+  font-size: 200%
