fix layout: use 'row' class instead of 'container'

--- a/views/index.jade
+++ b/views/index.jade
@@ -13,7 +13,7 @@ html
   body
     div
       canvas(id='graph') This is a fancy chart that requires JavaScript, sorry. :-(
-    div.container
+    div.row
       div.col-xs-3.text-left
         label(for="start") Starting at
         br
@@ -29,4 +29,3 @@ html
     div(id='controls')
 
     != js()
-
