--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,7 @@ html
     meta(http-equiv='X-UA-Compatible', content='IE=edge, chrome=1')
     meta(name='description', content='Historical graphs of Seattle freeway traffic')
     //- uncomment if your site is responsive!
-    //- meta(name="viewport" content="width=device-width, initial-scale=1")
+    meta(name="viewport" content="width=device-width, initial-scale=0.65, user-scalable=no")
     title traffic
     != css()
 
@@ -27,5 +27,5 @@ html
         br
         select(id='end')
     div(id='controls')
-
+    div(style="height:4em")
     != js()
