replace chart.js with uvCharts.js

--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,7 @@ html
 
   body
     div
-      canvas(id='graph') This is a fancy chart that requires JavaScript, sorry. :-(
+      div(id='uv-div')
     div.row
       div.col-xs-3.text-left
         label(for="start") Starting at
