switch from uvCharts to flot
Ah, good old flot, don't let me down now.

--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,7 @@ html
 
   body
     div
-      div(id='uv-div')
+      div(id='graph')
     div.row
       div.col-xs-3.text-left
         label(for="start") Starting at
