make flot chart automatically resizing

--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,7 @@ html
 
   body
     div
-      div(id='graph')
+      div(id='graph', style="width:100%")
     div.row
       div.col-xs-3.text-left
         label(for="start") Starting at
