add tooltip to chart

--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -26,3 +26,9 @@ label
 #delta, #weeks
   width: 3em
   
+#tooltip
+  position: absolute
+  display: none
+  padding: 2px
+  border: 1px solid
+  background-color: white
