re-word readme a bit, and include some of readme in the live page

--- a/views/index.jade
+++ b/views/index.jade
@@ -36,9 +36,28 @@ html
         br
         input(id='delta', type='text')
       div.col-xs-3.text-right
-        label(for="weeks") # of weeks to include
+        label(for="weeks") # of days to include
         br
         input(id='weeks', type='text')
+    div(id='usage', style='padding-bottom:2em')
+      h3 More Info
+      div
+        :markdown
+          This is a historical graph
+          freeway traffic, based on data from
+          [WSDOT](http://www.wsdot.com/traffic/traveltimes/default.aspx). The idea is
+          a quick glance at how travel times in the same timespan in the same day of
+          the week can show a pattern for how reliable the current trend is, today.
+
+          Setting|Default|Explanation
+          :---|------:|:----
+          Starting at             |     Seattle | City to start at
+          Via route               | I-5, SR 520 | Possible routes between them
+          Ending                  |     Redmond | City to end at, may change depending on `Starting at`
+          Time                    |   (now)     | Time to base the graph on, this time falls in the exact center
+          Hours before and after  |           6 | Number of hours to show before and after `Time`
+          \# of days              |           5 | Number of days to include in the graph (days are 1 week apart)
+
     div.text-center
       a(href="https://github.com/brewingcode/seattle-traffic") view on github.com
     div(style="height:4em")
