change `weeks` setting to a dropdown
Now that the timing data is limited specifically to 8 weeks in the past,
an arbitrary textinput value isn't as appropriate. Additionally, simplify the
GA event reporting...it doesn't matter whether users change a textinput, a
dropdown, etc...lump them all under "change".

--- a/views/index.jade
+++ b/views/index.jade
@@ -38,7 +38,9 @@ html
       div.col-xs-3.text-right
         label(for="weeks") # of days to include
         br
-        input(id='weeks', type='text')
+        select(id='weeks')
+          each n in [1,2,3,4,5,6,7,8]
+            option(val=n)= n
     div(id='usage', style='padding-bottom:2em')
       h3 More Info
       div
